--- a/cancer.ipynb
+++ b/cancer.ipynb
@@ -2795,7 +2795,7 @@
       "source": [
         "import google.generativeai as genai\n",
         "\n",
-        "genai.configure(api_key=\"AIzaSyDUMweB_NWbBnxjOohG-frpKMoUnT8gKkg\")\n",
+        "genai.configure(api_key=\"\")\n",
         "\n",
         "# List available models\n",
         "models = list(genai.list_models())\n",
